# tree-sitter-topineur

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-topineur.pc.in
bindings/c/tree_sitter/: tree-sitter-topineur.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_topineur/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTopineurTests/: TreeSitterTopineurTests.swift
examples/: binaryops.top  fibonacci.top  objects.top  superior.top
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
